--- a/index.html
+++ b/index.html
@@ -45,6 +45,21 @@
 
         
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/29.png" class="img-fluid" alt="">
+              <div class="portfolio-info">                
+                <p>Bhakitah-Blog</p>
+                <div class="portfolio-links">
+                  <a href="https://bhakitah-blog.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+                <div class="portfolio-links">
+                  <a href="https://bhakitah-blog.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
                               <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                                 <div class="portfolio-wrap">
                                   <img src="assets/img/1.png" class="img-fluid" alt="">
@@ -358,21 +373,6 @@
                                     </div>
                                     <div class="portfolio-links">
                                       <a href="https://cahmyrrhbank.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-
-                              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                                <div class="portfolio-wrap">
-                                  <img src="assets/img/5.png" class="img-fluid" alt="">
-                                  <div class="portfolio-info">
-                                    <p>Drive Connect</p>
-                                    <div class="portfolio-links">
-                                      <a href="https://drive-connect.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
-                                    </div>
-                                    <div class="portfolio-links">
-                                      <a href="https://drive-connect.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
