--- a/index.html
+++ b/index.html
@@ -105,6 +105,21 @@
                                   </div>
                                 </div>
                               </div>
+
+                              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                                <div class="portfolio-wrap">
+                                  <img src="assets/img/30.png" class="img-fluid" alt="">
+                                  <div class="portfolio-info">                                 
+                                    <p>Olympics-Blog-LandingPage</p>
+                                    <div class="portfolio-links">
+                                      <a href="https://olympicsblog.co.ke/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://olympicsblog.co.ke/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
                   
                               <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                                 <div class="portfolio-wrap">
