--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                                 <div class="portfolio-wrap">
                                   <img src="assets/img/8.png" class="img-fluid" alt="">
                                   <div class="portfolio-info">                                  
-                                    <p>TechTrove</p>
+                                    <p>Ecommerce-Draft</p>
                                     <div class="portfolio-links">
                                       <a href="https://tech-trove.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
