--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@
                                   <div class="portfolio-info">                                  
                                     <p>Ecommerce-Draft</p>
                                     <div class="portfolio-links">
-                                      <a href="https://tech-trove.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                      <a href="https://margo-blackfriday.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
                                     <div class="portfolio-links">
-                                      <a href="https://tech-trove.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                      <a href="https://margo-blackfriday.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
