--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
                                   <div class="portfolio-info">                                 
                                     <p>Olympics-Blog-LandingPage</p>
                                     <div class="portfolio-links">
-                                      <a href="https://olympicsblog.co.ke/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                      <a href="https://olympics-blog-landing-page.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
                                     <div class="portfolio-links">
-                                      <a href="https://olympicsblog.co.ke/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                      <a href="https://olympics-blog-landing-page.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
@@ -127,10 +127,10 @@
                                   <div class="portfolio-info">                                    
                                     <p>STEM for life kenya Foundation</p>
                                     <div class="portfolio-links">
-                                      <a href="https://stemforlifekenya.org/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                      <a href="https://stem-flk.vercel.app" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
                                     <div class="portfolio-links">
-                                      <a href="https://stemforlifekenya.org/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                      <a href="https://stem-flk.vercel.app"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
