--- a/index.html
+++ b/index.html
@@ -294,10 +294,10 @@
                                   <div class="portfolio-info">                                  
                                     <p>StartUp</p>
                                     <div class="portfolio-links">
-                                      <a href="https://startup-omega-navy.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                      <a href="https://tech-trove.vercel.app" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
                                     <div class="portfolio-links">
-                                      <a href="https://startup-omega-navy.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                      <a href="https://tech-trove.vercel.app"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
