--- a/index.html
+++ b/index.html
@@ -151,6 +151,21 @@
                                 </div>
                               </div>
 
+                              <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                                <div class="portfolio-wrap">
+                                  <img src="assets/img/32.jpg" class="img-fluid" alt="">
+                                  <div class="portfolio-info">                
+                                    <p>Foodie Recipe</p>
+                                    <div class="portfolio-links">
+                                      <a href="https://foodiefind.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://foodiefind.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
                               <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                                 <div class="portfolio-wrap">
                                   <img src="assets/img/3.png" class="img-fluid" alt="">
