--- a/index.html
+++ b/index.html
@@ -106,6 +106,36 @@
                                 </div>
                               </div>
 
+                              <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                                <div class="portfolio-wrap">
+                                  <img src="assets/img/40.png" class="img-fluid" alt="">
+                                  <div class="portfolio-info">                
+                                    <p>Asset Management System</p>
+                                    <div class="portfolio-links">
+                                      <a href="#" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="#"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                                <div class="portfolio-wrap">
+                                  <img src="assets/img/41.jpg" class="img-fluid" alt="">
+                                  <div class="portfolio-info">                
+                                    <p>iPhone Web</p>
+                                    <div class="portfolio-links">
+                                      <a href="https://myiphone.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://myiphone.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
                               <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                                 <div class="portfolio-wrap">
                                   <img src="assets/img/30.png" class="img-fluid" alt="">
