--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
                                 <div class="portfolio-wrap">
                                   <img src="assets/img/30.png" class="img-fluid" alt="">
                                   <div class="portfolio-info">                                 
-                                    <p>Olympics-Blog-LandingPage</p>
+                                    <p>Kimmj-Tours</p>
                                     <div class="portfolio-links">
-                                      <a href="https://olympics-blog-landing-page.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                      <a href="https://travel-with-kimmj.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
                                     <div class="portfolio-links">
-                                      <a href="https://olympics-blog-landing-page.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                      <a href="https://travel-with-kimmj.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
@@ -248,10 +248,10 @@
                                   <div class="portfolio-info">                                    
                                     <p>Portfolio</p>
                                     <div class="portfolio-links">
-                                      <a href="https://bhakitah.co.ke/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                      <a href="https://mugambijavan.netlify.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
                                     <div class="portfolio-links">
-                                      <a href="https://bhakitah.co.ke/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                      <a href="https://mugambijavan.netlify.app/"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
