--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-            <h2>Projects Exhibit</h2>      
+            <h2>Projects</h2>      
         </div>
 
         
@@ -480,21 +480,6 @@
                                     </div>
                                     <div class="portfolio-links">
                                       <a href="https://capture-lp.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-
-                              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                                <div class="portfolio-wrap">
-                                  <img src="assets/img/25.png" class="img-fluid" alt="">
-                                  <div class="portfolio-info">                                 
-                                    <p>#</p>
-                                    <div class="portfolio-links">
-                                      <a href="#" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
-                                    </div>
-                                    <div class="portfolio-links">
-                                      <a href="#"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
