--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
                                   <div class="portfolio-info">                                 
                                     <p>Kimmj-Tours</p>
                                     <div class="portfolio-links">
-                                      <a href="https://travel-with-kimmj.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                      <a href="https://kimmj.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
                                     <div class="portfolio-links">
-                                      <a href="https://travel-with-kimmj.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                      <a href="https://kimmj.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
