--- a/index.html
+++ b/index.html
@@ -244,14 +244,14 @@
 
                               <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                                 <div class="portfolio-wrap">
-                                  <img src="assets/img/11.png" class="img-fluid" alt="">
+                                  <img src="assets/img/41.png" class="img-fluid" alt="">
                                   <div class="portfolio-info">                                    
-                                    <p>Portfolio</p>
+                                    <p>Nexus</p>
                                     <div class="portfolio-links">
-                                      <a href="https://mugambijavan.netlify.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                      <a href="#" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
                                     <div class="portfolio-links">
-                                      <a href="https://mugambijavan.netlify.app/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                      <a href="#"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
