--- a/index.html
+++ b/index.html
@@ -334,6 +334,21 @@
 
                               <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                                 <div class="portfolio-wrap">
+                                  <img src="assets/img/42.png" class="img-fluid" alt="">
+                                  <div class="portfolio-info">                                    
+                                    <p>Github Username Finder</p>
+                                    <div class="portfolio-links">
+                                      <a href="https://github-finder-beta-two.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://github-finder-beta-two.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                                <div class="portfolio-wrap">
                                   <img src="assets/img/21.png" class="img-fluid" alt="">
                                   <div class="portfolio-info">                                  
                                     <p>OnePage</p>
