--- a/index.html
+++ b/index.html
@@ -301,7 +301,20 @@
                                   </div>
                                 </div>
                               </div>
-
+                              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                                <div class="portfolio-wrap">
+                                  <img src="assets/img/50.png" class="img-fluid" alt="">
+                                  <div class="portfolio-info">                                  
+                                    <p>One Page</p>
+                                    <div class="portfolio-links">
+                                      <a href="https://wikipedia-web-iota.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://wikipedia-web-iota.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
                               
 
                               <div class="col-lg-4 col-md-6 portfolio-item filter-app">
