"Added new portfolio item with image, description, and links to https://onenotes.vercel.app/"

--- a/index.html
+++ b/index.html
@@ -351,6 +351,21 @@
 
                               <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                                 <div class="portfolio-wrap">
+                                  <img src="assets/img/43.png" class="img-fluid" alt="">
+                                  <div class="portfolio-info">                                 
+                                    <p>Notes</p>
+                                    <div class="portfolio-links">
+                                      <a href="https://onenotes.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://onenotes.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                                <div class="portfolio-wrap">
                                   <img src="assets/img/20.png" class="img-fluid" alt="">
                                   <div class="portfolio-info">                                 
                                     <p>Capture</p>
