"Added new project wrapper and image to index.html"

--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
           ><img src="assets/16.png" alt="Project"
         /></a>
       </div>
+      <div class="wrapper project-wrapper">
+        <a target="_blank" href="https://quantum-ventures.vercel.app/"
+          ><img src="assets/20.png" alt="Project"
+        /></a>
+      </div>
     </section>
     <footer>
       <p>&copy Mugambi Javan 2024</p>
